first version of whole presentation

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -41,6 +41,18 @@
 }
 
 
+@book{colavizza_2020,
+	title = {The citation advantage of linking publications to research data},
+	volume = {15},
+	doi = {10.1371/journal.pone.0230416},
+	number = {4},
+	journal = {PLOS ONE},
+	author = {Colavizza, Giovanni and Hrynaszkiewicz, Iain and Staden, Isla and Whitaker, Kirstie and McGillivray, Barbara},
+	year = {2020},
+	pages = {e0230416},
+}
+
+
 @book{wilkinson_2016,
 	title = {The {FAIR} {Guiding} {Principles} for scientific data management and stewardship},
 	volume = {3.1},
@@ -51,10 +63,74 @@
 	pages = {160018},
 }
 
+
+@book{silvester_2015,
+	title = {Content discovery and retrieval services at the {European} {Nucleotide} {Archive}},
+	volume = {43},
+	doi = {10.1093/nar/gku1129},
+	journal = {Nucleic Acids Research},
+	author = {Silvester, Nicole and Alako, Blaise and Amid, Clara and Cerdeño-Tárraga, Ana and Cleland, Iain and Gibson, Richard and Goodgame, Neil and ten Hoopen, Petra and Kay, Simon and Leinonen, Rasko and Li, Weizhong and Liu, Xin and Lopez, Rodrigo and Pakseresht, Nima and Pallreddy, Swapna and Plaister, Sheila and Radhakrishnan, Rajesh and Rossello, Marc and Senf, Alexander and Smirnov, Dmitriy and Toribio, Ana Luisa and Vaughan, Daniel and Zalunin, Vadim and Cochrane, Guy},
+	year = {2015},
+	pmid = {25404130},
+	pmcid = {PMC4383942},
+	pages = {D23-D29},
+}
+
+@misc{ernest_2020,
+  author       = {Ernest, Morgan and Brown, James and Valone, Thomas and White, Ethan P.},
+  title        = {Portal Project Teaching Database},
+  year         = 2020,
+  publisher    = {Figshare},
+  doi          = {10.6084/m9.figshare.1314459.v10},
+}
+
 @misc{the_turing_way_community_2021_5706310,
   author       = {{The Turing Way Community} and {Scriberia}},
   title        = {Illustrations from the Turing Way book dashes},
   year         = 2021,
   publisher    = {Zenodo},
   doi          = {10.5281/zenodo.5706310},
+}
+
+@book{wickham_2014,
+ title={Tidy Data},
+ volume={59.10},
+ doi={10.18637/jss.v059.i10},
+ journal={Journal of Statistical Software},
+ author={Wickham, Hadley},
+ year={2014},
+ pages={1-23}
+}
+
+@misc{lowndes_2020,
+  author       = {Lowndes, Julie and Horst, Allison},
+  title        = {Tidy data for efficiency, reproducibility and collaboration},
+  year         = 2020,
+  publisher    = {Openscape},
+  URL          = {https://www.openscapes.org/blog/2020/10/12/tidy-data/},
+}
+
+@misc{kelion_2020,
+  author       = {Leo Kelion},
+  title        = {{Excel: Why using the Microsoft tool cause Covid-19 results to be lost}},
+  year         = 2020,
+  publisher    = {BBC News},
+  URL          = {https://www.bbc.com/news/technology-54423988},
+}
+
+@misc{vincent_2020,
+  author       = {James Vincent},
+  title        = {Scientists rename human genes to stop Microsoft Excel from misreading them as dates},
+  year         = 2020,
+  publisher    = {The Verge},
+  URL          = {https://www.theverge.com/2020/8/6/21355674/human-genes-rename-microsoft-excel-misreading-dates},
+}
+
+@book{white_2013,
+ title={Nine simple ways to make it easier to (re)use your data},
+ volume={1.e7v2},
+ doi={10.7287/peerj.preprints.7v2},
+ journal={PeerJ Preprints},
+ author={White, Ethan P. and Baldridge, Elita and Brym, Zachary T. and Locey, Kenneth J. and McGlinn, Daniel J. and Supp, Sarah R.},
+ year={2013},
 }
