--- a/data-organisation.Rmd
+++ b/data-organisation.Rmd
@@ -884,14 +884,51 @@ So we need to structure our data in a way computers can understand.
 
 ---
 
-# Exporting data in an open file format
+# Using open file formats
 
 - **Accessible**: usable by multiple types of software that are freely available (e.g. note that Microsoft requires a paid licence)
 - **Life expectancy**: open file formats are more suitable for long-terms preservation because they don't rely ona single software programme
 - **Publishing**: data repositories, journals and funding agencies may have requirements for open file formats
 - **Universal format**: interoperable format that produces the same results when it is imported by various software programmes, including plain text editors
-- **Comma delimited**: comma-separated value files (.csv) are plain text files where the columns are separated by commas
 
+
+---
+
+# Which open file format `r emo::ji("thinking")`?
+
+- **Comma delimited**: comma-separated value files (.csv) are plain text files where the columns are separated by commas
+- **Tab delimited**: tab-separated value files (.tsv) are plain text files where the columns are separated by tabs (\t)
+
+---
+
+# Which open file format? `r emo::ji("thinking")`
+
+.pull-left[
+
+### Comma delimited
+
+comma-separated value files (.csv) are plain text files where the columns are separated by commas
+
+`r emo::ji("thumbs_up_medium_light_skin_tone")` commonly used
+
+`r emo::ji("thumbs_down_medium_light_skin_tone")` annoying when data itself contains commas
+
+]
+
+--
+
+.pull-right[
+
+### Tab delimited
+
+tab-separated value files (.tsv) are plain text files where the columns are separated by tabs (\t)
+
+
+`r emo::ji("thumbs_up_medium_light_skin_tone")` no confusion when data contains commas or semicolons
+
+`r emo::ji("thumbs_down_medium_light_skin_tone")` not very commonly used (at least not yet)
+
+]
 ---
 
 # Exporting from Excel to .csv
@@ -900,11 +937,20 @@ So we need to structure our data in a way computers can understand.
 2. In the Format field select `CSV UTF-8 (Comma delimited) (.csv)` from the list
 3. Double check the file name and the location where you want to save the data and hit `Save`
 
----
+--
 
-# My data contains commas!
+### My data contains commas!
 
 Enclose the data fields with double quotes and double check that the file you are exporting can be read in correctly.
+
+---
+
+# Exporting from Excel to .tsv
+
+1. From the top menu, select `File` and `Save as`
+2. In the Format field select `Text (Tab delimited) (.txt)` from the list
+3. Double check the file name and the location where you want to save the data and hit `Save`
+4. Rename the file you just saved and change the extension from `.txt` to `.tsv`
 
 ---
 
